<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.daa.citas.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.daa.citas.ui.cita.CitaFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_cita" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.daa.citas.ui.confirmarCita.ConfirmarCitaFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_confirmarcita" />
</navigation>