<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.daa.citas.ui.confirmarCita.ConfirmarCitaFragment" >

    <TextView
        android:id="@+id/text_slideshow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.683" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/viewtituloConfirmacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="161dp"
        android:gravity="center"
        android:text="@string/viewtituloConfirmacion"
        android:textColor="#628F80"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/viewnombreDoctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="124dp"
        android:textStyle="bold"
        android:textSize="14sp"
        android:text="@string/vwnombreDoctor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/viewEspecialidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:textStyle="bold"
        android:textSize="14sp"
        android:layout_marginTop="25dp"
        android:text="@string/vwEspecialidad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewnombreDoctor" />

    <TextView
        android:id="@+id/viewHospital"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="25dp"
        android:textStyle="bold"
        android:textSize="14sp"
        android:text="@string/vwHospital"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewEspecialidad" />

    <TextView
        android:id="@+id/viewDia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:textStyle="bold"
        android:textSize="14sp"
        android:layout_marginTop="25dp"
        android:text="@string/vwDia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewHospital" />

    <TextView
        android:id="@+id/viewHorario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="25dp"
        android:textStyle="bold"
        android:textSize="14sp"
        android:text="@string/vwHorario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewDia" />


    <EditText
        android:id="@+id/lblnombreDoctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:ems="6"
        android:inputType="textPersonName"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="@+id/viewnombreDoctor"
        app:layout_constraintStart_toEndOf="@+id/viewnombreDoctor"
        app:layout_constraintTop_toTopOf="@+id/viewnombreDoctor" />

    <EditText
        android:id="@+id/lblnombreEspcialidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:ems="6"
        android:inputType="textPersonName"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="@+id/viewEspecialidad"
        app:layout_constraintStart_toEndOf="@+id/viewEspecialidad"
        app:layout_constraintTop_toTopOf="@+id/viewEspecialidad" />

    <EditText
        android:id="@+id/lblnombreHopital"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:ems="6"
        android:inputType="textPersonName"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="@+id/viewHospital"
        app:layout_constraintStart_toEndOf="@+id/viewHospital"
        app:layout_constraintTop_toTopOf="@+id/viewHospital" />

    <EditText
        android:id="@+id/lblHora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:ems="6"
        android:inputType="textPersonName"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="@+id/viewDia"
        app:layout_constraintStart_toEndOf="@+id/viewDia"
        app:layout_constraintTop_toTopOf="@+id/viewDia" />

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:ems="6"
        android:inputType="textPersonName"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="@+id/viewHorario"
        app:layout_constraintStart_toEndOf="@+id/viewHorario"
        app:layout_constraintTop_toTopOf="@+id/viewHorario" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="161dp"
        android:text="Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5" />


</androidx.constraintlayout.widget.ConstraintLayout>